tests/fixtures/positive/licensing/notice-file-out-of-date/settings.gradle.kts
rootProject.name = "notice-file-out-of-date-positive"

include(":app")
