tests/fixtures/negative/licensing/notice-file-out-of-date/settings.gradle.kts
rootProject.name = "notice-file-out-of-date-negative"

include(":app")
